# embedlib

./: .gitignore  CMakeLists.txt  README.md
ab0805/: CMakeLists.txt  ab0805.c  ab0805.h
act2861/: CMakeLists.txt  act2861.c  act2861.h  act_configs.h  charger.c  charger.h
adxl355/: adxl355.c  adxl355.h  adxl_inf.c
angles/: CMakeLists.txt  angles.c  angles.h
ar0822/: CMakeLists.txt  ar0822.c  ar0822.h  example_settings.ini  sensor_config.h  settings_conv.py
autogen/: version.h
dmgui/: CMakeLists.txt  dmgui.c  dmgui.h
efinix/: CMakeLists.txt  trion.c  trion.h
emc1812/: CMakeLists.txt  emc1812.c  emc1812.h
esp32/: CMakeLists.txt
events/: events.c  events.h
gmax0505/: CMakeLists.txt  gmax0505.c  gmax0505.h
image/: CMakeLists.txt  img_manip.c  img_manip.h
lis3dsh/: CMakeLists.txt  lis3dsh.c  lis3dsh.h
log/: CMakeLists.txt  log.c  log.h  logger.py
max17049/: CMakeLists.txt  max17049.c  max17049.h
max17320/: CMakeLists.txt  max17320.c  max17320.h
modbus/: modbus.c  modbus.h
pid/: pid.c  pid.h  tasks.py  test.c
ssd1309z/: CMakeLists.txt  ssd1309z.c  ssd1309z.h
statistics/: CMakeLists.txt  stats.c  stats.h
stm32boot/: CMakeLists.txt  stm32boot.c  stm32boot.h
stusb4500/: CMakeLists.txt  stusb4500.c  stusb4500.h
sy103/: CMakeLists.txt  sy103.c  sy103.h
tca6408/: CMakeLists.txt  tca6408.c  tca6408.h
tmc2208/: tmc2208.c  tmc2208.h
tmc2209/: CMakeLists.txt  tmc2209.c  tmc2209.h  tmc2209_example.c  tmc2209_test.c
w25q/: CMakeLists.txt  CMakeLists.txt.bak  w25q.c  w25q.h
